--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -w",
-    "start": "nodemon --inspect dist/app.js"
+    "watch": "tsc -w",
+    "dev": "nodemon --inspect dist/app.js",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
