--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.15",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "typescript": "^4.9.4"
   },
